<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/memberPictureBlurred"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/blur_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.CardView
                android:id="@+id/memberPicture"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="@android:color/black"
                app:cardCornerRadius="50dp"
                app:cardElevation="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/connectedMemberIndicator"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="135dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/connected_member"
                app:layout_constraintStart_toStartOf="@+id/memberPicture"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/memberName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum_short"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/memberPicture" />

            <TextView
                android:id="@+id/memberCatchPhrase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum_short"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/memberName" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/messageAction"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="16dp"
                android:onClick="onMessageActionClick"
                android:src="@drawable/ic_mail_white"
                app:backgroundTint="@android:color/holo_blue_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/memberCatchPhrase" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/memberResume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/memberPictureBlurred">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/memberPictureDescriptionLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/memberPictureSeparatorView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/memberPictureDescription"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_people_black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/memberPictureDescriptionLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum_short"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/memberPictureDescription" />

            </android.support.constraint.ConstraintLayout>

            <View
                android:id="@+id/memberPictureSeparatorView"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/memberPictureSeparatorView"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/memberMarkLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mark_label"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/memberMark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mark_placeholder"
                    android:textAlignment="center"
                    android:textColor="#FDCB6E"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/memberMarkLabel" />

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

        <View
            android:id="@+id/separatorView"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/memberResume" />

        <TextView
            android:id="@+id/memberTextDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:lines="5"
            android:maxLines="10"
            android:minLines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separatorView" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>